<resources>
    <string name="app_name">Code Block</string>

    <!-- Guides -->
    <string name="guide_text">1. If your block wont created check correctness of data </string>
    <string name="array_guide_text">2. Require to index of array by \"_\"(arr_index)</string>


    <!-- Blocks-->
    <string name="hint_math_exp_block">Number</string>
    <string name="hint_index_block">Index</string>
    <string name="new_var_name_block_hint">Name</string>
    <string name="new_arr_name_block_hint">Name</string>
    <string name="new_var_data_block_hint">Value</string>
    <string name="new_arr_capacity_block_hint">Size</string>
    <string name="make_block_button_text">Create</string>
    <string name="continue_button">Continue</string>
    <string name="block_set_equal">=</string>
    <string name="arr_block_start_range_value">from</string>
    <string name="arr_block_end_range_value">to</string>


    <!-- Main menu -->
    <string name="start_button_text">New program</string>
    <string name="app_label">Code block</string>

    <!-- Botton menu -->
    <string name="delete_last_bottom_menu">Delete last</string>
    <string name="compile_bottom_menu">Compile</string>
    <string name="blocks_bottom_menu">Blocks</string>

    <!-- Navigation menu -->
    <string name="first_big_title_nav_menu">Variable</string>
    <string name="second_big_title_nav_menu">Array</string>
    <string name="third_big_title_nav_menu">If operator</string>
    <string name="fourth_big_title_nav_menu">For operator</string>
    <string name="fifth_big_title_nav_menu">While operator</string>

    <string name="title_1_1_nav_menu">Create variable</string>
    <string name="title_1_2_nav_menu">Set value</string>
    <string name="title_1_3_nav_menu">Print variable</string>

    <string name="title_2_1_nav_menu">Create array</string>
    <string name="title_2_2_nav_menu">Set value</string>
    <string name="title_2_3_nav_menu">Print array</string>

    <string name="title_3_1_nav_menu">if</string>
    <string name="title_3_2_nav_menu">then</string>
    <string name="title_3_3_nav_menu">else</string>
    <string name="title_3_4_nav_menu">endIf</string>

    <string name="title_4_1_nav_menu">for</string>
    <string name="title_4_2_nav_menu">endFor</string>

    <string name="title_5_1_nav_menu">while</string>
    <string name="title_5_2_nav_menu">endWhile</string>

</resources>