<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="1"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/guide_bg"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/guide_text_padding"
            android:text="@string/guide_text"
            android:textAlignment="textStart"
            android:textSize="@dimen/normal_text_size" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/guide_text_padding"
            android:text="@string/array_guide_text"
            android:textAlignment="textStart"
            android:textSize="@dimen/normal_text_size" />

        <Button
            android:id="@+id/createBlockButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:backgroundTint="@color/button_color"
            android:text="@string/continue_button"
            android:textAllCaps="false"
            android:textSize="@dimen/normal_text_size" />

    </LinearLayout>

</FrameLayout>