<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="1"
    android:padding="24dp"
    tools:context=".MathematicFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/math_expression_block"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_border"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <Spinner
                    android:id="@+id/arrMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/indexInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/little_text_size"
                android:hint="@string/hint_index_block"
                android:inputType="textVisiblePassword" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/block_set_equal" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mathExpInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_math_exp_block"
                android:inputType="textVisiblePassword" />

        </LinearLayout>

        <Button
            android:id="@+id/createBlockButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_color"
            android:text="@string/make_block_button_text"
            android:textAllCaps="false"
            android:textSize="@dimen/normal_text_size" />

    </LinearLayout>

</FrameLayout>