<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="1"
    android:padding="24dp"
    tools:context=".CreateVariableFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/array_block"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameHolder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/rounded_border"
                    android:hint="@string/new_arr_name_block_hint"

                    android:inputType="textVisiblePassword|textPersonName"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:textColorHint="@color/blue" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/dataHolder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/rounded_border"
                        android:hint="@string/new_arr_capacity_block_hint"
                        android:inputType="number"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:textColorHint="@color/blue" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/createBlockButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/button_color"
            android:text="@string/make_block_button_text"
            android:textAllCaps="false"
            android:textSize="@dimen/normal_text_size" />

    </LinearLayout>

</FrameLayout>